<resources>
    <string name="app_name">Prueba2</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="rainbow">Rainbow</string>
    <string name="clean">Clean</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
</resources>